--- a/js-features/cookie-clicker/task.html
+++ b/js-features/cookie-clicker/task.html
@@ -23,6 +23,9 @@
                 <div class="clicker__status">
                     Всего кликов <span id="clicker__counter">0</span>
                 </div>
+                <div class="clicker__speed">
+                    Скорость кликов: <span id="speed">0</span>
+                </div>
                 <img 
                     src="https://i.postimg.cc/T1bWdf2y/1024px-Pepperidge-Farm-Nantucket-Cookie.jpg" 
                     alt=""
@@ -32,6 +35,6 @@
             </div>
         </div>
     </main>    
-    <script src="task.js"></script>
+    <script src="/JavaS_2/homeworksJS/js-features/cookie-clicker/task.js"></script>
 </body>
 </html>
