--- a/js-features/countdown/task.html
+++ b/js-features/countdown/task.html
@@ -21,10 +21,12 @@
     <main class="content">
         <div class="card">
             <div id="status">
-                До окончания конкурса осталось секунд: <span id="timer">59</span>
+                До окончания конкурса осталось секунд:<span id="timer-h">00:</span> 
+                <span id="timer-min">01:</span>
+                <span id="timer">10</span>
             </div>
         </div>
     </main>    
-    <script src="task.js"></script>
+    <script src="/JavaS_2/homeworksJS/js-features/countdown/task.js"></script>
 </body>
 </html>
