--- a/js-features/cookie-clicker/task.html
+++ b/js-features/cookie-clicker/task.html
@@ -35,6 +35,6 @@
             </div>
         </div>
     </main>    
-    <script src="/JavaS_2/homeworksJS/js-features/cookie-clicker/task.js"></script>
+    <script src="task.js"></script>
 </body>
 </html>
