--- a/js-features/countdown/task.html
+++ b/js-features/countdown/task.html
@@ -27,6 +27,6 @@
             </div>
         </div>
     </main>    
-    <script src="/JavaS_2/homeworksJS/js-features/countdown/task.js"></script>
+    <script src="task.js"></script>
 </body>
 </html>
